--- a/.prow/tests.yaml
+++ b/.prow/tests.yaml
@@ -245,3 +245,23 @@ presubmits:
             limits:
               memory: 4Gi
               cpu: 2
+
+  - name: pre-kubermatic-test-addon-upgrades
+    decorate: true
+    always_run: false
+    run_if_changed: "(addons/|pkg/test/addon|pkg/addon|pkg/controller/seed-controller-manager/addon.*)"
+    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+    labels:
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: quay.io/kubermatic/build:go-1.22-node-20-kind-0.22-3
+          command:
+            - "./hack/ci/run-addons-integration-test.sh"
+          resources:
+            requests:
+              memory: 4Gi
+              cpu: 2
+            limits:
+              memory: 4Gi
+              cpu: 2
