--- a/pkg/crd/k8c.io/kubermatic.k8c.io_addons.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_addons.yaml
@@ -16,6 +16,9 @@ spec:
   scope: Namespaced
   versions:
     - additionalPrinterColumns:
+        - jsonPath: .status.phase
+          name: Phase
+          type: string
         - jsonPath: .metadata.creationTimestamp
           name: Age
           type: date
@@ -151,6 +154,16 @@ spec:
                       - status
                     type: object
                   type: object
+                phase:
+                  default: New
+                  description: |-
+                    Phase is a description of the current addon status, summarizing the various conditions.
+                    This field is for informational purpose only and no logic should be tied to the phase.
+                  enum:
+                    - New
+                    - Healthy
+                    - Unhealthy
+                  type: string
               type: object
           type: object
       served: true
