--- a/charts/monitoring/prometheus/values.yaml
+++ b/charts/monitoring/prometheus/values.yaml
@@ -32,8 +32,8 @@ prometheus:
     compressWAL: true
 
   configReloaderImage:
-    repository: docker.io/jimmidyson/configmap-reload
-    tag: v0.8.0
+    repository: ghcr.io/jimmidyson/configmap-reload
+    tag: v0.12.0
     pullPolicy: IfNotPresent
 
   # If you install Prometheus using a different Helm release name,
