--- a/charts/backup/velero/Chart.yaml
+++ b/charts/backup/velero/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v2
 name: velero
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: v1.10.1
 description: A Helm chart for Velero
 keywords:
