--- a/charts/iap/Chart.yaml
+++ b/charts/iap/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v1
 name: iap
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: v7.4.0
 description: A Helm chart to install OAuth2-Proxy as an identity-aware proxy.
 keywords:
