--- a/charts/kubermatic-operator/Chart.yaml
+++ b/charts/kubermatic-operator/Chart.yaml
@@ -14,8 +14,8 @@
 
 apiVersion: v1
 name: kubermatic-operator
-version: v9.9.9-dev
-appVersion: v9.9.9-dev
+version: 9.9.9-dev
+appVersion: 9.9.9-dev
 description: Helm chart to install the Kubermatic Operator
 keywords:
   - kubermatic
