--- a/charts/logging/loki/Chart.yaml
+++ b/charts/logging/loki/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v2
 name: loki
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: v2.5.0
 description: "Loki: like Prometheus, but for logs."
 keywords:
