--- a/charts/logging/promtail/Chart.yaml
+++ b/charts/logging/promtail/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v2
 name: promtail
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: v2.5.0
 description: "Responsible for gathering logs and sending them to Loki"
 keywords:
