--- a/charts/minio/Chart.yaml
+++ b/charts/minio/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v1
 name: minio
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: RELEASE.2023-05-04T21-44-30Z
 description: minio
 keywords:
