--- a/charts/mla/alertmanager-proxy/Chart.yaml
+++ b/charts/mla/alertmanager-proxy/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v2
 name: alertmanager-proxy
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: 0.3.3
 description: A Helm chart to install KKP MLA Alertmanager Proxy.
 keywords:
