--- a/charts/mla/cortex/Chart.yaml
+++ b/charts/mla/cortex/Chart.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 apiVersion: v2
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: v1.14.1
 description: 'Horizontally scalable, highly available, multi-tenant, long term Prometheus.'
 home: https://cortexmetrics.io/
