--- a/charts/mla/minio-lifecycle-mgr/Chart.yaml
+++ b/charts/mla/minio-lifecycle-mgr/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v2
 name: minio-lifecycle-mgr
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: 0.1.0
 description: A Helm chart to install Minio Bucket Lifecycle Manager.
 keywords:
