--- a/charts/mla/minio/Chart.yaml
+++ b/charts/mla/minio/Chart.yaml
@@ -15,7 +15,7 @@
 apiVersion: v2
 description: High Performance, Kubernetes Native Object Storage
 name: minio
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: RELEASE.2023-04-28T18-11-17Z
 keywords:
   - storage
