--- a/charts/monitoring/alertmanager/Chart.yaml
+++ b/charts/monitoring/alertmanager/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v1
 name: alertmanager
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: v0.25.0
 description: Alertmanager for Kubermatic
 keywords:
