--- a/charts/monitoring/blackbox-exporter/Chart.yaml
+++ b/charts/monitoring/blackbox-exporter/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v1
 name: blackbox-exporter
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: v0.23.0
 description: Deploys the Prometheus Blackbox Exporter
 keywords:
