--- a/charts/monitoring/karma/Chart.yaml
+++ b/charts/monitoring/karma/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v1
 name: karma
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: v0.114
 description: Dashboard for Prometheus Alertmanager
 keywords:
