--- a/charts/monitoring/kube-state-metrics/Chart.yaml
+++ b/charts/monitoring/kube-state-metrics/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v1
 name: kube-state-metrics
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: v2.8.2
 description: Kube-State-Metrics for Kubermatic
 keywords:
