--- a/charts/monitoring/node-exporter/Chart.yaml
+++ b/charts/monitoring/node-exporter/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v1
 name: node-exporter
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: v1.5.0
 description: Prometheus Node Exporter for Kubermatic
 keywords:
