--- a/charts/monitoring/prometheus/Chart.yaml
+++ b/charts/monitoring/prometheus/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v1
 name: prometheus
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: v2.43.1
 description: Prometheus Monitoring for Kubernetes
 keywords:
