--- a/charts/nginx-ingress-controller/Chart.yaml
+++ b/charts/nginx-ingress-controller/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v2
 name: nginx-ingress-controller
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: 1.9.3
 description: nginx-ingress-controller
 keywords:
