--- a/charts/telemetry/Chart.yaml
+++ b/charts/telemetry/Chart.yaml
@@ -15,7 +15,7 @@
 apiVersion: v1
 name: telemetry
 description: A Helm chart to install Kubermatic telemetry agents
-version: v9.9.9-dev
+version: 9.9.9-dev
 appVersion: v0.5.0
 keywords:
   - telemetry
